tests/NormalTests/paczka1/small_fuzzy/94503137.err
Error in line 3: OZ7vXwAA81 A666 48,4
Error in line 6: OZ7vXwAA81 A468 99,7
Error in line 7: OZ7vXwAA81 A666 8,4
